# lgr_jira_clone

./: Cargo.toml
data/: db.json
src/: db.rs  io_utils.rs  main.rs  models.rs  navigator.rs
src/ui/: prompts.rs
src/ui/pages/: mod.rs  page_helpers.rs
