[package]
name = "LGR-jira-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
anyhow = "1"
ellipse = "0.2.0"
itertools = "0.10.3"

[dev-dependencies]
tempfile = "3.3.0"